support for docker with tar.gz install

--- a/templates/simple_config.conf.j2
+++ b/templates/simple_config.conf.j2
@@ -6,7 +6,7 @@ input {
 
 output {
   elasticsearch {
-    hosts => [{{ logstash_elasticsearch_url }}]
+    hosts => ["{{ logstash_elasticsearch_url }}"]
     index => "%{[@metadata][beat]}-%{[@metadata][version]}" 
   }
 }
